Update 13 Client side render, html

--- a/PracticasClases/13csr/cliente/index.html
+++ b/PracticasClases/13csr/cliente/index.html
@@ -10,6 +10,17 @@
 
 <body>
     <div id="app"></div>
+    <ul>
+        <li>
+            Hola
+        </li>
+        <li>
+            Adiós
+        </li>
+        <li>
+            Bye.
+        </li>
+    </ul>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
